Closed Bug 433719 Opened 17 years ago Closed 17 years ago

Menu commands are double-processed in Camino when plugins are focused

Categories

(Core :: Widget: Cocoa, defect, P1)

x86
macOS
defect

Tracking

()

RESOLVED FIXED

People

(Reporter: stuart.morgan+bugzilla, Assigned: jaas)

References

()

Details

(Keywords: regression, verified1.9.0.4)

Attachments

(2 files)

This is a regression from bug 428047: 1) Focus a plugin (I've tested Quicktime and Flash; presumably others are the same) 2) Press command-N 3) Get two new windows. FWIW, if it's between this behavior, and just never sending events to plugins if there is a menu command that would be triggered (as I gather used to be the case), I'd much rather have the latter.
Flags: wanted1.9.0.x?
Flags: wanted1.9.0.x? → wanted1.9.0.x+
Priority: -- → P1
I've now tested a bunch of key combinations (though not all of them), and command-n is the only one I've found that gets processed twice. Which means that we could conceivably hack a special case for command-n ... though I'd really prefer not to. Please let me know if there are any others I've missed -- particularly on non-US keyboards.
Attached patch fix v1.0Splinter Review
This works by unconditionally returning YES from performKeyEquivalent if an embedder's menus return YES for handled. We still inform the plugin of the event even if the embedder's menus handled the event, so long as the plugin as focus. This patch should be safe enough for the 1.9.0 branch because it only changes our behavior if an embedder's native menus handle an event. It won't affect any XUL-based applications like Firefox.
Attachment #333978 - Flags: review?
Attachment #333978 - Flags: review? → review?(stuart.morgan)
Comment on attachment 333978 [details] [diff] [review] fix v1.0 The variable name is a bit confusing; it's odd that "return returnYesUncondationally" can return NO. What about something more like "handledByEmbeddor"? r=smorgan either way.
Attachment #333978 - Flags: review?(stuart.morgan) → review+
Comment on attachment 333978 [details] [diff] [review] fix v1.0 I'll change the variable name on checkin.
Attachment #333978 - Flags: superreview?(roc)
Attached patch trunk fix v1.0Splinter Review
Attachment #334196 - Flags: superreview?(roc)
Attachment #333978 - Flags: superreview?(roc)
Attachment #334196 - Flags: superreview?(roc) → superreview+
Attachment #334196 - Flags: approval1.9.0.3?
Landed on trunk. We need this in 1.9.0.x so that Camino can ship off of the 1.9.0 branch. Risk is minimal because the logic doesn't change except in the embedding case.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
We'd really like to get this in the next week or so if possible, as we're hoping to ship our alpha in early/mid September and this is perhaps the most noticeable regression that I see in normal use.
Blocks: 458205
Requesting blocking. This bug is one of a handful of Cocoa Widget regressions that I feel leave 1.9.0 unsuitable for stable release by Cocoa embeddors; it's frustrating that in over a month no progress has been made on landing an essentially zero-risk fix for it.
Flags: blocking1.9.0.4?
Flags: blocking1.9.0.4?
Comment on attachment 334196 [details] [diff] [review] trunk fix v1.0 Approved for 1.9.0.4, a=dveditz for release-drivers
Attachment #334196 - Flags: approval1.9.0.4? → approval1.9.0.4+
landed for 1.9.0.4
Keywords: fixed1.9.0.4
Could someone from the Camino team please verify that this is fixed. Using Camino 1.6.4, I haven't been able to reproduce the original issue.
Flags: in-testsuite?
Verified in Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en; rv:1.9.0.4pre) Gecko/2008101818 Camino/2.0a1 (like Firefox/3.0.4pre) Clicking in a Flash video and pressing Cmd-N no longer produces two new windows.
Status: RESOLVED → VERIFIED
Changing this to resolved and changing the keyword from "fixed1.9.0.4" to "verified1.9.0.4". The "verified" resolution is used for Trunk in this case, not for 1.9.0.4. Thanks for the quick verification. It's appreciated!
Status: VERIFIED → RESOLVED
Closed: 17 years ago17 years ago
No longer blocks: 458205
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: