Don't process events twice when a plugin has focus in an embedding situation. b=433719 r=smorgan sr=roc