widget/src/cocoa/nsChildView.mm
@@ -5518,6 +5518,10 @@ static BOOL keyUpAlreadySentKeyDown = NO;
   if (nsTSMManager::IsComposing())
     return NO;
 
+  // Set to true if embedding menus handled the event when a plugin has focus.
+  // We give menus a crack at handling commands before Gecko in the plugin case.
+  BOOL handledByEmbedding = NO;
+
   // Perform native menu UI feedback even if we stop the event from propagating to it normally.
   // Recall that the menu system won't actually execute any commands for keyboard command invocations.
   //
@@ -5525,10 +5529,14 @@ static BOOL keyUpAlreadySentKeyDown = NO;
   // If the action on plugins here changes the first responder, don't continue.
   NSMenu* mainMenu = [NSApp mainMenu];
   if (mIsPluginView) {
-    if ([mainMenu isKindOfClass:[GeckoNSMenu class]])
+    if ([mainMenu isKindOfClass:[GeckoNSMenu class]]) {
       [(GeckoNSMenu*)mainMenu actOnKeyEquivalent:theEvent];
-    else
-      [mainMenu performKeyEquivalent:theEvent];
+    }
+    else {
+      // This is probably an embedding situation. If the native menu handle the event
+      // then return YES from pKE no matter what Gecko or the plugin does.
+      handledByEmbedding = [mainMenu performKeyEquivalent:theEvent];
+    }
     if ([[self window] firstResponder] != self)
       return YES;
   }
@@ -5550,7 +5558,7 @@ static BOOL keyUpAlreadySentKeyDown = NO;
   // if we reject here
   if (!keyDownNeverFiredEvent &&
       (modifierFlags & (NSFunctionKeyMask| NSNumericPadKeyMask)))
-    return NO;
+    return handledByEmbedding;
 
   // Control and option modifiers are used when changing input sources in the
   // input menu. We need to send such key events via "keyDown:", which will
@@ -5559,12 +5567,12 @@ static BOOL keyUpAlreadySentKeyDown = NO;
   // for such events.
   if (!keyDownNeverFiredEvent &&
       (modifierFlags & (NSControlKeyMask | NSAlternateKeyMask)))
-    return NO;
+    return handledByEmbedding;
 
   if ([theEvent type] == NSKeyDown) {
     // We trust the Gecko handled status for cmd key events. See bug 417466 for more info.
     if (modifierFlags & NSCommandKeyMask)
-      return [self processKeyDownEvent:theEvent keyEquiv:YES];
+      return ([self processKeyDownEvent:theEvent keyEquiv:YES] || handledByEmbedding);
     else
       [self processKeyDownEvent:theEvent keyEquiv:YES];
   }
